# Identificaci-n-de-especies-mediante-an-lisis-de-espectrogramas

./: EDA_y_Generacion_de_espectrogramas.ipynb  README.md
EDA_y_generación_espectrogramas/: EDA_y_Generacion_de_espectrogramas.ipynb
Modelo_Resnet_18/: README.md  red.ipynb
MovilNetV3small/: movilnetv3small.md  train_model.ipynb  training_logs_depth_3.json  training_logs_depth_5.json  training_logs_depth_7.json  training_logs_depth_no fine tunning.json
YAMNet/: README.md  classification_report.md  data_preprocessing.ipynb  modelo_inferencia.ipynb  pyproject.toml  training_history_Classifier.csv  yamnet_transf.ipynb
YAMNet/models/: class_mapping.csv
