[project]
name = "tp-cv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "keras==2.15.*",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "resampy>=0.4.3",
    "setuptools<82",
    "soundfile>=0.13.1",
    "tensorflow-hub==0.16.1",
    "tensorflow-io==0.36.*",
    "tensorflow[and-cuda]==2.15.1",
    "tf-keras==2.15.*",
]
